Fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -21,5 +21,5 @@ body,
 
 body {
   @apply bg-white dark:bg-slate-900;
-  position: fixed;
+  overflow: hidden;
 }
